# 2DGameDevelopmentLibrary

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  main.cpp
example/include/: CustomComponent.hpp  Game.hpp  PlayerMovement.hpp
example/src/: CustomComponent.cpp  Game.cpp  PlayerMovement.cpp  main.cpp
include/: CMakeLists.txt
include/GDL/: BaseRenderer.hpp  CMakeLists.txt  CircleShapeRenderer.hpp  Collider.hpp  Component.hpp  Entity.hpp  GDL.hpp  RectangleShapeRenderer.hpp  Scene.hpp  ShapeRenderer.hpp  SpriteRenderer.hpp  Utils.hpp
src/: CMakeLists.txt
src/GDL/: BaseRenderer.cpp  CMakeLists.txt  CircleShapeRenderer.cpp  Collider.cpp  Component.cpp  Entity.cpp  RectangleShapeRenderer.cpp  Scene.cpp  ShapeRenderer.cpp  SpriteRenderer.cpp  Utils.cpp
